--- a/HTML/html_structure.html
+++ b/HTML/html_structure.html
@@ -17,5 +17,20 @@
     <!-- h는 제목 태그로 뒤의 숫자는 6까지 있고 숫자가 클수록 작아집니다. -->
     <h1>큰 제목입니다.</h1>
     <h6>가장 작은 제목입니다.</h6>
+    <!--
+      시멘틱 태그는 간단하게는 의미가 있는걸 의미한다.
+      non-semantic태그는 의미가 없는 태그를 의미하는데 예로 div나 span태그가 있다.
+      div는 특정 단락에 span은 특정 문장에 효과를 주기 위해 사용되는데 브라우저는 여기에 무슨의미가 있는지 알 수 없다.
+      semantic태그의 예로는 section이나 nav, article, header같은 태그가 있는데 브라우저는 이를 통해
+      이게 제목부인지 네이게이션바인지 알 수 있다.
+      이들은 DIV와 큰 차이가 없지만 최근 시각장애인을 위해 웹페이지를 기계가 인식해 읽어준다던지
+      AI가 웹페이지를 검색함에 있어 시멘틱 태그로 단락을 구분하기 때문에 시멘틱 태그로 구현하는게 권장사항이다.
+    -->
+    <div>div는 주로 한 단락에 효과나 style를 줄 때 사용된다.</div>
+    <span>span은 문장에 효과를 주기 위해 사용된다.</span>
+    <header>
+      header은 시멘틱 태그로 주로 상단부에 사이트 네임이나 로고가 들어간다.
+    </header>
+    <nav>네이게이션바 시멘틱 태그로 메뉴바의 내용이 들어간다.</nav>
   </body>
 </html>
