스마트폰 상단 바 부분 구현

--- a/finalTest/HTML/index.html
+++ b/finalTest/HTML/index.html
@@ -5,12 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Main Page</title>
+    <title>Main Page | Final Test</title>
     <link rel="stylesheet" href="../CSS/contests.css">
+    <!-- 정의 시 fontawesome.com에서 제공하는 무료 icon들을 사용할 수 있다. -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 
 <body>
-
+    <!-- 스크린샷 최상단의 핸드폰 상태바를 만들어준다. -->
+    <div class="top-bar">
+        <div class="top-bar__iconBox">
+            <i class="far fa-image"></i>
+            <i class="fas fa-registered"></i>
+        </div>
+        <div class="top-bar__phoneInfoBox">
+            <!-- css들어있는 아이콘들 -->
+            <i class="fab fa-bluetooth-b"></i>
+            <i class="fas fa-volume-up"></i>
+            <i class="fas fa-filter"></i>
+            <span class="top-bar__battery">88% </span>
+            <i class="fas fa-battery-three-quarters"></i>
+            <span class="top-bar__clock">오후 08:33 </span>
+        </div>
+    </div>
 </body>
 
 </html>
