html header부 작성

--- a/finalTest/HTML/index.html
+++ b/finalTest/HTML/index.html
@@ -29,6 +29,24 @@
             <span class="top-bar__clock">오후 08:33 </span>
         </div>
     </div>
+    <!-- 구동 앱의 헤더부분 -->
+    <header class="header">
+        <div class="header_column">
+            <i class="fas fa-play-circle fa-2x"></i>
+            <h1>MainPage</h1>
+        </div>
+        <div class="header_column">
+            <span class="header_right-icon">
+                <i class="fas fa-video fa-2x"></i>
+            </span>
+            <span class="header_right-icon">
+                <i class="fas fa-search fa-2x"></i>
+            </span>
+            <span class="header_right-icon">
+                <i class="fas fa-user fa-2x"></i>
+            </span>
+        </div>
+    </header>
 </body>
 
 </html>
