--- a/finalTest/HTML/index.html
+++ b/finalTest/HTML/index.html
@@ -47,6 +47,32 @@
             </span>
         </div>
     </header>
+    <!-- 메뉴부분 최하단이지만 메뉴이기 때문에 nav태그 -->
+    <nav class="menu">
+        <!-- 메뉴 버튼은 리스트로 만든다. -->
+        <ul class="menu_list">
+            <li class="menu_list_item">
+                <a href="index.html" class="menu_list_item_link">
+                    <i class="fas fa-house-damage fa-3x"></i>
+                </a>
+            </li>
+            <li class="menu_list_item">
+                <a href="bookMark.html" class="menu_list_item_link">
+                    <i class="fas fa-bookmark fa-3x"></i>
+                </a>
+            </li>
+            <li class="menu_list_item">
+                <a href="pushPage.html" class="menu_list_item_link">
+                    <i class="fas fa-envelope fa-3x"></i>
+                </a>
+            </li>
+            <li class="menu_list_item">
+                <a href="myPage.html" class="menu_list_item_link">
+                    <i class="fas fa-folder fa-3x"></i>
+                </a>
+            </li>
+        </ul>
+    </nav>
 </body>
 
 </html>
