main작업 중.. 저장

--- a/finalTest/HTML/bookMark.html
+++ b/finalTest/HTML/bookMark.html
@@ -47,6 +47,17 @@
             </span>
         </div>
     </header>
+    <!-- 페이지의 메인컨텐츠가 들어가는곳 다른 태그 하위에 두지 않아야 하고 중복컨텐츠도 넣지 않는다. -->
+    <main class="vods">
+        <ul class="vods_list">
+            <li class="vods_list_vod">
+                <!-- 네이밍을 할 때 너무 많은 하부경로가 생긴다면 부모명으로 새로운 네이밍으로 시작한다. vods->vod -->
+                <div class="vod_column"></div>
+            </li>
+            <li class="vods_list_vod"></li>
+            <li class="vods_list_vod"></li>
+        </ul>
+    </main>
     <!-- 메뉴부분 최하단이지만 메뉴이기 때문에 nav태그 -->
     <nav class="menu">
         <!-- 메뉴 버튼은 리스트로 만든다. -->
