--- a/finalTest/HTML/bookMark.html
+++ b/finalTest/HTML/bookMark.html
@@ -1,81 +1,80 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>BookMark | Final Test</title>
-    <link rel="stylesheet" href="../CSS/contests.css" />
-    <!-- 정의 시 fontawesome.com에서 제공하는 무료 icon들을 사용할 수 있다. -->
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-  </head>
 
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>BookMark | Final Test</title>
+    <link rel="stylesheet" href="../CSS/contests.css">
+    <!-- 정의 시 fontawesome.com에서 제공하는 무료 icon들을 사용할 수 있다. -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+</head>
+
+<body>
     <!-- 스크린샷 최상단의 핸드폰 상태바를 만들어준다. -->
     <div class="top-bar">
-      <div class="top-bar__iconBox">
-        <i class="far fa-image"></i>
-        <i class="fas fa-registered"></i>
-      </div>
-      <div class="top-bar__phoneInfoBox">
-        <!-- css들어있는 아이콘들 -->
-        <i class="fab fa-bluetooth-b"></i>
-        <i class="fas fa-volume-up"></i>
-        <i class="fas fa-filter"></i>
-        <span class="top-bar__battery">88% </span>
-        <i class="fas fa-battery-three-quarters"></i>
-        <span class="top-bar__clock">오후 08:33 </span>
-      </div>
+        <div class="top-bar__iconBox">
+            <i class="far fa-image"></i>
+            <i class="fas fa-registered"></i>
+        </div>
+        <div class="top-bar__phoneInfoBox">
+            <!-- css들어있는 아이콘들 -->
+            <i class="fab fa-bluetooth-b"></i>
+            <i class="fas fa-volume-up"></i>
+            <i class="fas fa-filter"></i>
+            <span class="top-bar__battery">88% </span>
+            <i class="fas fa-battery-three-quarters"></i>
+            <span class="top-bar__clock">오후 08:33 </span>
+        </div>
     </div>
     <!-- 구동 앱의 헤더부분 -->
     <header class="header">
-      <div class="header_column">
-        <i class="fas fa-play-circle fa-2x"></i>
-        <h1>BookMark</h1>
-      </div>
-      <div class="header_column">
-        <span class="header_right-icon">
-          <i class="fas fa-video fa-2x"></i>
-        </span>
-        <span class="header_right-icon">
-          <i class="fas fa-search fa-2x"></i>
-        </span>
-        <span class="header_right-icon">
-          <i class="fas fa-user fa-2x"></i>
-        </span>
-      </div>
+        <div class="header_column">
+            <i class="fas fa-play-circle fa-2x"></i>
+            <h1>BookMark</h1>
+        </div>
+        <div class="header_column">
+            <span class="header_right-icon">
+                <i class="fas fa-video fa-2x"></i>
+            </span>
+            <span class="header_right-icon">
+                <i class="fas fa-search fa-2x"></i>
+            </span>
+            <span class="header_right-icon">
+                <i class="fas fa-user fa-2x"></i>
+            </span>
+        </div>
     </header>
+    <!-- 페이지의 메인컨텐츠가 들어가는곳 다른 태그 하위에 두지 않아야 하고 중복컨텐츠도 넣지 않는다. -->
 
     <!-- 메뉴부분 최하단이지만 메뉴이기 때문에 nav태그 -->
     <nav class="menu">
-      <!-- 메뉴 버튼은 리스트로 만든다. -->
-      <ul class="menu_list">
-        <li class="menu_list_item">
-          <a href="index.html" class="menu_list_item_link">
-            <i class="fas fa-home fa-3x"></i>
-          </a>
-        </li>
-        <li class="menu_list_item">
-          <a href="bookMark.html" class="menu_list_item_link">
-            <i class="far fa-bookmark fa-3x"></i>
-          </a>
-        </li>
-        <li class="menu_list_item">
-          <a href="pushPage.html" class="menu_list_item_link">
-            <i class="fas fa-envelope fa-3x"></i>
-          </a>
-        </li>
-        <li class="menu_list_item">
-          <a href="myPage.html" class="menu_list_item_link">
-            <i class="fas fa-folder fa-3x"></i>
-          </a>
-        </li>
-      </ul>
+        <!-- 메뉴 버튼은 리스트로 만든다. -->
+        <ul class="menu_list">
+            <li class="menu_list_item">
+                <a href="index.html" class="menu_list_item_link">
+                    <i class="fas fa-home fa-3x"></i>
+                </a>
+            </li>
+            <li class="menu_list_item">
+                <a href="bookMark.html" class="menu_list_item_link">
+                    <i class="far fa-bookmark fa-3x"></i>
+                </a>
+            </li>
+            <li class="menu_list_item">
+                <a href="pushPage.html" class="menu_list_item_link">
+                    <i class="fas fa-envelope fa-3x"></i>
+                </a>
+            </li>
+            <li class="menu_list_item">
+                <a href="myPage.html" class="menu_list_item_link">
+                    <i class="fas fa-folder fa-3x"></i>
+                </a>
+            </li>
+        </ul>
     </nav>
-  </body>
+</body>
+
 </html>
