--- a/finalTest/HTML/index.html
+++ b/finalTest/HTML/index.html
@@ -53,6 +53,7 @@
       <li class="vods_list_vod vod">
         <!-- 네이밍을 할 때 너무 많은 하부경로가 생긴다면 부모명으로 새로운 네이밍으로 시작한다. vods->vod -->
         <div class="vod_column">
+          <!-- 경로나 파일명 확장자에는 되도록 소문자를 쓴다 이미 대문자로 만들어 수정 안함 -->
           <img src="../IMG/thumbnail2.jpg" alt="영상 썸네일 사진" class="vod_thumbnail">
         </div>
         <div class="vod_column">
