북마크 추가중...

--- a/finalTest/HTML/bookMark.html
+++ b/finalTest/HTML/bookMark.html
@@ -48,7 +48,15 @@
         </div>
     </header>
     <!-- 페이지의 메인컨텐츠가 들어가는곳 다른 태그 하위에 두지 않아야 하고 중복컨텐츠도 넣지 않는다. -->
+    <main>
+        <ul class="bookMarks_list">
+            <li class="bookMarks_bookMark bookMark">
+                <!-- 현재 파일이 아닌 여러군대서 사용할 클래스명은 -g를 붙여 전역변수라는걸 표시해두면 유지보수에 편하다. -->
+                <img src="../IMG/avatar1.jpg" alt="bj의 아바타" class="bookMark_avatar g-avatar">
 
+            </li>
+        </ul>
+    </main>
     <!-- 메뉴부분 최하단이지만 메뉴이기 때문에 nav태그 -->
     <nav class="menu">
         <!-- 메뉴 버튼은 리스트로 만든다. -->
