--- a/finalTest/HTML/index.html
+++ b/finalTest/HTML/index.html
@@ -59,7 +59,7 @@
         <div class="vod_column">
           <img src="../IMG/avatar1.jpg" alt="사용자 등록사진" class="vod_avatar">
           <span class="vod_title">외할머니댁에 가는길에 들린 담양 죽녹원에서...</span>
-          <span class="vod_user-id">유종현</span>
+          <span class="vod_user-id">fkfkfk9</span>
           <span class="vod_hit-count">100</span>
           <span class="vod_date">2주일 전</span>
         </div>
