--- a/finalTest/HTML/index.html
+++ b/finalTest/HTML/index.html
@@ -57,7 +57,7 @@
           <img src="../IMG/thumbnail2.jpg" alt="영상 썸네일 사진" class="vod_thumbnail">
         </div>
         <div class="vod_column">
-          <img src="../IMG/avatar1.jpg" alt="사용자 등록사진" class="vod_avatar">
+          <img src="../IMG/avatar1.jpg" alt="사용자 등록사진" class="vod_avatar g-avatar">
           <span class="vod_title">외할머니댁에 가는길에 들린 담양 죽녹원에서...</span>
           <span class="vod_user-id">fkfkfk9</span>
           <span class="vod_hit-count">100</span>
@@ -72,7 +72,7 @@
           <img src="../IMG/thumbnail1.jpg" alt="영상 썸네일 사진" class="vod_thumbnail">
         </div>
         <div class="vod_column">
-          <img src="../IMG/avatar2.jpg" alt="사용자 등록사진" class="vod_avatar">
+          <img src="../IMG/avatar2.jpg" alt="사용자 등록사진" class="vod_avatar g-avatar">
           <span class="vod_title">새로 구입한 차량을 인수 받은 후에 썬팅시공소에서...</span>
           <span class="vod_user-id">보배</span>
           <span class="vod_hit-count">500</span>
@@ -87,7 +87,7 @@
           <img src="../IMG/thumbnail3.jpg" alt="영상 썸네일 사진" class="vod_thumbnail">
         </div>
         <div class="vod_column">
-          <img src="../IMG/avatar3.jpg" alt="사용자 등록사진" class="vod_avatar">
+          <img src="../IMG/avatar3.jpg" alt="사용자 등록사진" class="vod_avatar g-avatar">
           <span class="vod_title">수술 후에 깁스하고 앉아있는데 밤톨이가...</span>
           <span class="vod_user-id">밤톨</span>
           <span class="vod_hit-count">7</span>
@@ -109,7 +109,7 @@
         </a>
       </li>
       <li class="menu_list_item">
-        <a href="bookMark.html" class="menu_list_item_link">
+        <a href="favorite.html" class="menu_list_item_link">
           <i class="fas fa-bookmark fa-3x"></i>
         </a>
       </li>
