--- a/finalTest/HTML/pushPage.html
+++ b/finalTest/HTML/pushPage.html
@@ -57,7 +57,7 @@
                 </a>
             </li>
             <li class="menu_list_item">
-                <a href="bookMark.html" class="menu_list_item_link">
+                <a href="favorite.html" class="menu_list_item_link">
                     <i class="fas fa-bookmark fa-3x"></i>
                 </a>
             </li>
