--- a/finalTest/HTML/myPage.html
+++ b/finalTest/HTML/myPage.html
@@ -47,6 +47,79 @@
             </span>
         </div>
     </header>
+    <main class="myPage">
+        <header class="myPage_main-header">
+            <h4 class="main-header_title">최근 동영상</h4>
+            <ul class="lately-vods_list">
+                <li class="lately-vod">
+                    <div class="lately-vod_column">
+                        <img src="../IMG/thumbnail3.jpg" alt="" class="lately-vod_thumbnail">
+                    </div>
+                    <div class="lately-vod_column">
+                        <span class="vod_title">깁스 옆에 누원있는 밤톨이</span>
+                        <span class="vod_user-id">밤톨이</span>
+                    </div>
+                    <div class="lately-vod_column">
+                        <i class="fas fa-ellipsis-v"></i>
+                    </div>
+                </li>
+                <li class="lately-vod">
+                    <div class="lately-vod_column">
+                        <img src="../IMG/thumbnail4.jpg" alt="" class="lately-vod_thumbnail">
+                    </div>
+                    <div class="lately-vod_column">
+                        <span class="vod_title">아침에 마시는 녹즙 만드는법</span>
+                        <span class="vod_user-id">lchf master</span>
+                    </div>
+                    <div class="lately-vod_column">
+                        <i class="fas fa-ellipsis-v"></i>
+                    </div>
+                </li>
+            </ul>
+        </header>
+        <ul class="myPage_list">
+            <li class="myPage_item">
+                <div class="item_icon">
+                    <i class="far fa-clock fa-2x"></i>
+                </div>
+                <div class="item title">
+                    <span>기록</span>
+                </div>
+            </li>
+            <li class="myPage_item">
+                <div class="item_icon">
+                    <i class="fas fa-arrow-circle-down fa-2x"></i>
+                </div>
+                <div class="item title">
+                    <span>오프라인 동영상</span>
+                </div>
+            </li>
+            <li class="myPage_item">
+                <div class="item_icon">
+                    <i class="fas fa-video fa-2x"></i>
+                </div>
+                <div class="item title">
+                    <span>내 동영상</span>
+                </div>
+            </li>
+            <li class="myPage_item">
+                <div class="item_icon">
+                    <i class="fas fa-shopping-bag fa-2x"></i>
+                </div>
+                <div class="item title">
+                    <span>구입한 동영상</span>
+                </div>
+            </li>
+            <li class="myPage_item">
+                <div class="item_icon">
+                    <i class="fas fa-clock fa-2x"></i>
+                </div>
+                <div class="item title">
+                    <span>나중에 볼 동영상</span>
+                </div>
+            </li>
+        </ul>
+    </main>
     <!-- 메뉴부분 최하단이지만 메뉴이기 때문에 nav태그 -->
     <nav class="menu">
         <!-- 메뉴 버튼은 리스트로 만든다. -->
