--- a/finalTest/HTML/pushPage.html
+++ b/finalTest/HTML/pushPage.html
@@ -47,6 +47,55 @@
             </span>
         </div>
     </header>
+    <main class="push">
+        <header class="push_header">
+            <ul class="push_header-list">
+                <li class="push_header-btn header-btn">
+                    <span class="header-btn_title">메시지</span>
+                </li>
+                <li class="push_header-btn header-btn">
+                    <span class="header-btn_title">알림</span>
+                </li>
+            </ul>
+        </header>
+        <ul class="push_list">
+            <!-- 즐겨찾기와 동일한 형식으로 들어가기 때문에 클래스를 그대로 사용 가능하다 -->
+            <li class="push_favorite favorite">
+                <div class="favorite_column">
+                    <img src="../IMG/avatar3.jpg" alt="" class="favorite_avatar g-avatar">
+                    <div class="favorite_content">
+                        <span class="favorite_user-id">밤톨이님이 업로드한 깁스 옆에 누원있는 밤톨이</span>
+                        <span class="favorite_user-info">1일전</span>
+                    </div>
+                </div>
+                <div class="favorite_column">
+                    <div class="favorite_thumbnail">
+                        <img src="../IMG/thumbnail3.jpg" alt="" class="push_thumbnail">
+                    </div>
+                    <div class="favorite_icon">
+                        <i class="fas fa-ellipsis-v"></i>
+                    </div>
+                </div>
+            </li>
+            <li class="push_favorite favorite">
+                <div class="favorite_column">
+                    <img src="../IMG/avatar4.jpg" alt="" class="favorite_avatar g-avatar">
+                    <div class="favorite_content">
+                        <span class="favorite_user-id">lchf master님이 업로드한 아침에 마시는 녹즙 만드는법</span>
+                        <span class="favorite_user-info">3일전</span>
+                    </div>
+                </div>
+                <div class="favorite_column">
+                    <div class="favorite_thumbnail">
+                        <img src="../IMG/thumbnail4.jpg" alt="" class="push_thumbnail">
+                    </div>
+                    <div class="favorite_icon">
+                        <i class="fas fa-ellipsis-v"></i>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </main>
     <!-- 메뉴부분 최하단이지만 메뉴이기 때문에 nav태그 -->
     <nav class="menu">
         <!-- 메뉴 버튼은 리스트로 만든다. -->
