--- a/finalTest/HTML/myPage.html
+++ b/finalTest/HTML/myPage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Page | Final Test</title>
-    <link rel="stylesheet" href="../CSS/contests.css">
+    <link rel="stylesheet" href="../CSS/contents.css">
     <!-- 정의 시 fontawesome.com에서 제공하는 무료 icon들을 사용할 수 있다. -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
